--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>inspired-react-gallery</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Vinod Jangid - Portfolio</title>
+    <meta name="description" content="Full-stack developer portfolio showcasing modern web development projects" />
+    <meta name="author" content="Vinod Jangid" />
 
-    <meta property="og:title" content="inspired-react-gallery" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Vinod Jangid - Portfolio" />
+    <meta property="og:description" content="Full-stack developer portfolio showcasing modern web development projects" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
@@ -19,6 +19,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
