--- a/index.html
+++ b/index.html
@@ -3,18 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vinod Jangid - Portfolio</title>
+    <title>Jenil Goswami</title>
     <meta name="description" content="Full-stack developer portfolio showcasing modern web development projects" />
-    <meta name="author" content="Vinod Jangid" />
-
-    <meta property="og:title" content="Vinod Jangid - Portfolio" />
-    <meta property="og:description" content="Full-stack developer portfolio showcasing modern web development projects" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="author" content="Jenil Goswami" />
   </head>
 
   <body>
